src/less/blocks/page.less
/*
 This file is a part of libertysoil.org website
 Copyright (C) 2015  Loki Education (Social Enterprise)

 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU Affero General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.

 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU Affero General Public License for more details.

 You should have received a copy of the GNU Affero General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
.page {
  &__sidebar_user {
    margin-left: 5px;
    margin-bottom: 10px;

    .link {
      border: none;
    }
  }
}

.page__title {
  font-size: 40px;
}

.page__header {

}

.page__messages {
  margin-top: -27px;
}

.page__sidebar {
  padding: 10px;
  flex: 0 0 100%;
  min-width: 190px;
  box-sizing: border-box;
  order: 20;

  @media @after-small {
    order: 0;
    flex: 0 0 18%;
  }

  &-alt {
    flex: 0 0 100%;

    @media @after-base {
      flex: 0 0 30%;
    }
  }
}

.page__container {
  background: #f3f2f1;
  order: 10;

// this needs to be changed @agat
// min page height should be set instead
  padding-bottom: 300px;

  &-bg {
    background: #fff;
  }
}

.page__body {
  display: flex;
  max-width: @siteWidth;
  overflow: hidden;
  margin: auto;
  flex-wrap: wrap;

  &-block {
    display: block;
  }

  @media @after-base {

  }

  @media @after-small {
    /*.layout-columns;

    &-rows {
      .layout-rows;
    }*/
  }

  &-small {
    width: 600px;
    margin: 0 auto;

    @media @before-normal {
      width: auto;
    }

    @media @after-base {
      width: 700px;
    }
  }
}

.page__body_content {
  &:extend(.layout);
  &:extend(.layout-rows);
  flex: 1;
  margin-left: 10px;
}

.page__footer {

}

.page__content {
  padding: 10px;
  flex: 1;

  &-horizontal_space {
    padding-top: 0;
    padding-bottom: 0;
  }

  &-spacing {
    padding: @space * 3;

    @media @before-normal {
      padding: @space;
    }
  }

  &-fill {
    padding: 0;
  }
}

.page__content_sidebar {
  width: 160px;
  flex: 0 0 160px;
  box-sizing: border-box;
  border-left: 1px solid #edebe9;
}

.page__content-cloudy {
  opacity: 1;
  background-color: #fff;
}

